--- a/ui/package.json
+++ b/ui/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "perfetto-webui",
+  "name": "viewtrace-webui",
   "version": "1.0.0",
-  "description": "Perfetto Web UI",
-  "repository": "https://github.com/google/perfetto",
+  "description": "viewtrace.dev Web UI",
+  "repository": "https://github.com/tannewt/viewtrace.dev",
   "main": "main.js",
-  "author": "Perfetto Team",
+  "author": "viewtrace.dev",
   "license": "Apache-2.0",
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.6",
