Add Saleae trace format support and surface formats in UI/docs

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -188,6 +188,7 @@ if (enable_perfetto_trace_processor_sqlite) {
       "importers/perf",
       "importers/perf_text",
       "importers/pprof",
+      "importers/saleae",
       "importers/proto:full",
       "importers/proto:minimal",
       "importers/simpleperf_proto",
@@ -362,6 +363,7 @@ perfetto_unittest_source_set("unittests") {
     "importers/memory_tracker:unittests",
     "importers/perf:unittests",
     "importers/proto:unittests",
+    "importers/saleae:unittests",
     "importers/syscalls:unittests",
     "importers/systrace:unittests",
     "perfetto_sql/generator:unittests",
